k8s/06-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacr-mongo
  namespace: lacr-loan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lacr-mongo
  template:
    metadata:
      labels:
        app: lacr-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: lacr-mongo
  namespace: lacr-loan
spec:
  selector:
    app: lacr-mongo
  ports:
    - port: 27017
      targetPort: 27017
