k8s/09-kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.1
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
          readinessProbe:
            tcpSocket:
              port: kafka
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: kafka
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: platform
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: kafka
      name: kafka
    - port: 9093
      targetPort: controller
      name: controller
