k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lacr-ingress
  namespace: lacr-loan
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lacr.platform.internal
      secretName: lacr-tls
  rules:
    - host: lacr.platform.internal
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lacr-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lacr-frontend
                port:
                  number: 80
